filestash/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filestash
  labels:
    app: filestash
spec:
  type: ClusterIP
  ports:
    - port: 8334
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: filestash
