filestash/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: filestash
  labels:
    app: filestash
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'

spec:
  tls:
  - hosts:
    - $(FILESTASH_URL)
    secretName: filestash-tls
  rules:
  - host: $(FILESTASH_URL)
    http:
      paths:
      - path: /
        backend:
          serviceName: filestash
          servicePort: http
